# mini-opengl-renderer-tutorial

./: README.md  meson.build
res/shaders/: basicShader.fs  basicShader.vs
src/: camera.cpp  camera.h  display.cpp  display.h  main.cpp  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.h  vertex.h
